--- a/src/components/Aside-Profile/Aside.css
+++ b/src/components/Aside-Profile/Aside.css
@@ -4,8 +4,10 @@ aside {
 
 .avatar {
   width: 150px;
+  /* top: 15%; */
   padding: 10px;
 }
+
 .user-details {
   padding: 10px;
   margin: 20px 0px;
